--- a/requirements_whisper.txt
+++ b/requirements_whisper.txt
@@ -11,5 +11,8 @@ torch
 tqdm
 tiktoken
 
+# HuggingFace Whisper backend (optional; used when --model_path is a HF directory)
+transformers
+
 # both Whisper and SimulWhisper. Now supports Triton 2.x and 3.x with compatibility fix
 triton>=2.0.0;platform_machine=="x86_64" and sys_platform=="linux" or sys_platform=="linux2"
